--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.lfo.dafu">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+
 
 
         android:name=".MApplication"
